<resources>
    <string name="fb_app_id">fb617533715087104</string>
    <string name="app_name">Whatsapp</string>
    <string name="validacao">Validação</string>
    <string name="validacao_caption">Você recebeu um código SMS para validação, digite o código de validação abaixo:</string>
    <string name="validar">Validar</string>
    <string name="action_settings">Configurações</string>
    <string name="action_logout">Sair</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_add_person">Adicionar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
