<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/itemSettings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/itemLogout"
        android:title="@string/action_logout"
        android:orderInCategory="200"
        app:showAsAction="never"></item>

    <item android:title="@string/action_search"
        android:id="@+id/itemSearch"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search"></item>

    <item android:title="@string/action_add_person"
        android:id="@+id/itemAddPerson"
        android:orderInCategory="400"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_person_add"></item>

</menu>